--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "netlify-cli": "^6.14.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
     "stripe": "^8.186.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "use-shopping-cart": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
